--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.18",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "next": "^14.1.0",
+    "nodemailer": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.0.1",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
