メール送信機能をnodemailerからSendGridに変更（Edge Runtime対応）

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,12 +1,11 @@
-# メール送信のSMTP設定
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_SECURE=false
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
+# SendGrid API設定
+SENDGRID_API_KEY=SG.XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+# メール送信元アドレス
+EMAIL_FROM=info@composition2940.com
 
 # 管理者メールアドレス（お問い合わせの通知先）
-ADMIN_EMAIL=info@composition2940.com
+ADMIN_EMAIL=yusukefukushima@composition2940.com
 
 # 注意事項:
 # 1. このファイルをコピーして .env.local として保存してください
