--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@sendgrid/mail": "^8.1.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "next": "^14.1.0",
     "nodemailer": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.0.1",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "resend": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
