SendGridからMailgun APIに変更（Edge Runtime対応）

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,6 @@
-# SendGrid API設定
-SENDGRID_API_KEY=SG.XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+# Mailgun API設定
+MAILGUN_API_KEY=key-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+MAILGUN_DOMAIN=mg.composition2940.com
 
 # メール送信元アドレス
 EMAIL_FROM=info@composition2940.com
