--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.0.1",
+    "react-parallax": "^3.5.1",
     "remark-gfm": "^4.0.1",
     "resend": "^4.1.2"
   },
